src/recipe/snapshots/rattler_build__recipe__parser__tests__bad_skip_multi_output.snap
---
source: src/recipe/parser.rs
expression: err
---
  × Failed to parse recipe

Error: 
  × failed to render Jinja expression: syntax error: unexpected character (in
  │ <expression>:1)
    ╭─[12:11]
 11 │       skip:
 12 │         - asd;asd;123
    ·           ─────┬─────
    ·                ╰── here
    ╰────
